# HackTheLaw

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  MEMORY.md  Makefile  README.md  WHITEPAPER.md  crucible_memory.db  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
crucible/: config.py  latency.py  live_audio.py  live_context.py  memory.py  rl.py  runner.py  schemas.py  scoring.py
crucible/agents/: abort.py  adjudicator.py  architect.py  base.py  coach.py  gemini_client.py  opponent.py  personas.py  tuner.py
crucible/grounding/: allowed_sources.yaml  perplexity.py  source_policy.py
crucible/scenarios/: builder.py  difficult_client.yaml  generated.py  hot_seat.yaml  negotiation.yaml  upload.py
crucible/verify/: citations.py  entailment.py  entropy.py  secv.py
deploy/: cloud-run.md
plans/: README.md  RL_FLOW.md  THEORY_ADDENDUM.md  refinements.md  stage-0-scaffold.md  stage-1-vertical-slice.md  stage-2-cellar-grounding.md  stage-2.5-secv.md  stage-3-memory-breadth.md  stage-4-bonuses-polish.md
server/: .dockerignore  .env.example  Dockerfile  app.py  hardness.py  requirements-adk.txt  requirements.txt  scenario_routes.py
tests/: conftest.py  test_abort_tool.py  test_cellar_graph.py  test_citation_wiring.py  test_live_audio.py  test_memory.py  test_opponent_hardness.py  test_opponent_resistance.py  test_rl.py  test_scaffold.py  test_scenario_generation.py  test_scoring.py  test_secv.py  test_server.py  test_source_policy.py  test_tuner.py
web/: .env.example  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  (+13 more)
(+70 files in other folders)
