[project]
name = "crucible"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pypdf>=5.0.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "google-cloud-aiplatform>=1.60.0",
    "google-genai>=1.0.0",
    "neo4j>=5.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "anyio>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crucible", "server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: requires real model credentials (opt-in)",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
